--- a/main.Rmd
+++ b/main.Rmd
@@ -1,5 +1,134 @@
 ---
-title: "main"
+title: "Analiza danych demograficznych"
+author: "Mikołaj Data"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+# Cel analizy
+Moim celem było badanie rozwoju populacji.
+
+# Zbiór danych
+Zbiór danych zawiera informacje demograficzne dla krajów i terytoriów świata, obejmujące lata od 1970 do 2022 roku. Dane pochodzą z różnych źródeł statystycznych i zawierają m.in. populację w wybranych latach, powierzchnię kraju, gęstość zaludnienia, tempo wzrostu oraz udział danego kraju w populacji świata. Zbiór jest dostępny na stronie [kaggle.com](https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset)
+
+
+# Wstęp
+
+## Wczytanie danych z pliku CSV
+```{r}
+dataset <- read.csv("dataset.csv")
+head(dataset)
+```
+
+# Wstępna analiza danych
+## Średnia populacja w państw w roku 2022
+```{r}
+mean_population <- mean(as.numeric(dataset$X2022.Population))
+mean_population
+```
+
+## Mediana populacji w roku 2022
+```{r}
+median_population <- median(as.numeric(dataset$X2022.Population))
+median_population
+```
+
+Większość krajów ma znacznie mniejszą populację niż średnia.
+## Korelacja między współczynnikiem wzrostu, a powierzchnią państwa
+```{r}
+growth_area_correlation <- cor(
+  as.numeric(dataset$Area..km..),
+  as.numeric(dataset$Growth.Rate))
+growth_area_correlation
+```
+Powyższa wartość wskazuje, że nie istnieje żadna zależność.
+
+## Trzeci moment centralny
+```{r}
+library(moments)
+skewness(dataset$X2022.Population)
+```
+```{r}
+hist(dataset$X2022.Population, breaks = 200)
+```
+Rozkład jest asymetryczny. Większość krajów ma bardzo niską populacje i jest kilka krajów z bardzo duża populacją (np. Chiny).
+
+
+# Szczegółówe informacje dotyczące populacji
+
+```{r}
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+
+selected_countries <- c("India", "China", "Nigeria", "United States", "Brazil")
+
+# Dane długie (long format) dla populacji
+pop_data <- dataset %>%
+  filter(Country.Territory %in% selected_countries) %>%
+  select(Country.Territory, starts_with("X")) %>%
+  pivot_longer(cols = starts_with("X"),
+               names_to = "Year",
+               values_to = "Population") %>%
+  mutate(Year = as.numeric(gsub("X|\\.Population", "", Year)))
+
+
+```
+
+```{r}
+ggplot(pop_data, aes(x = Year, y = Population, color = Country.Territory)) +
+  geom_line(size = 1.2) +
+  labs(title = "Zmiana populacji 1970–2022", x = "Rok", y = "Liczba ludności") +
+  theme_minimal()
+```
+
+```{r}
+top_density <- dataset %>%
+  arrange(desc(Density..per.km..)) %>%
+  slice(1:10)
+
+ggplot(top_density, aes(x = reorder(Country.Territory, Density..per.km..),
+                        y = Density..per.km..)) +
+  geom_col(fill = "tomato") +
+  coord_flip() +
+  labs(title = "10 krajów o największym zagęszczeniu ludności",
+       x = "Kraj", y = "Gęstość (osoby/km²)") +
+  theme_minimal()
+```
+
+
+```{r}
+library(treemap)
+library(dplyr)
+
+# 1. Konwertujemy dane do właściwego typu i usuwamy błędne wiersze
+dataset_clean <- dataset %>%
+  mutate(X2022.Population = as.numeric(X2022.Population)) %>%
+  filter(!is.na(X2022.Population) & X2022.Population > 0) %>%
+  filter(!is.na(Country.Territory) & Country.Territory != "")
+
+# 2. Wybieramy 30 krajów z najwyższą populacją
+top_countries <- dataset_clean %>%
+  arrange(desc(X2022.Population)) %>%
+  slice_head(n = 30)
+
+# 3. Wyświetlamy kilka wierszy kontrolnych
+print(head(top_countries[, c("Country.Territory", "X2022.Population")]))
+
+# 4. Tworzymy tree mapę
+treemap(top_countries,
+        index = "Country.Territory",
+        vSize = "X2022.Population",
+        title = "Populacja 30 najludniejszych krajów (2022)",
+        palette = "Greens",
+        fontsize.labels = 10,
+        border.col = "white")
+
+```
+# Hipotezy statystyczne
+
+# Spis użytych funkcji
